--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@mikro-orm/core": "^5.9.5",
     "@mikro-orm/mongodb": "^5.9.5",
+    "@mikro-orm/nestjs": "^5.2.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
